--- a/sundae-starter/package.json
+++ b/sundae-starter/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=18.17.1"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,19 +14,20 @@
     "test": "vitest --watch"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vitest": "^3.0.9"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^0.34.6",
     "eslint": "^8.45.0",
     "eslint-plugin-jest-dom": "^5.1.0",
@@ -32,10 +36,9 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-testing-library": "^6.1.0",
     "eslint-plugin-vitest": "^0.3.8",
-    "jsdom": "^22.1.0",
+    "jsdom": "^26.0.0",
     "msw": "^2.0.3",
     "npm": "^10.2.2",
-    "vite": "^4.4.5",
-    "vitest": "^0.34.6"
+    "vite": "^4.4.5"
   }
 }
