--- a/sundae-starter/package.json
+++ b/sundae-starter/package.json
@@ -3,9 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "engines": {
-    "node": ">=18.17.1"
-  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -14,18 +11,19 @@
     "test": "vitest --watch"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/dom": "^10.4.0",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "^18.2.0",
-    "vitest": "^3.0.9"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.5.1",
-    "@types/react": "^18.2.15",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^19.0.11",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^0.34.6",
@@ -39,6 +37,7 @@
     "jsdom": "^26.0.0",
     "msw": "^2.0.3",
     "npm": "^10.2.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vitest": "^3.0.9"
   }
 }
